[package]
name = "QubicLightNode"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
prost = "0.13.5"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["transport"] }
tonic-reflection = "0.12.3"

[build-dependencies]
protoc-bin-vendored = "3.1.0"
tonic-build = "0.12.3"
